adjustments to return pageable in searches, use the error handler and the PartnerSpecifications to search database